--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,12 +12,16 @@ html(lang="en")
         main
             div#welcome
                 form
-                    input(placeholder="room name", required, type="text")
+                    input#roomName(placeholder="room name", required, type="text")
+                    input#name(placeholder="name", required, type="text")
                     button Enter Room
             div#room
                 h3 
-                ul 
-                form
+                ul
+                form#name
+                    input(placeholder="Nickname" required, type="text")
+                    button change 
+                form#msg
                     input(placeholder="message", required, type="text")
                     button Send 
 
