--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,22 +10,11 @@ html(lang="en")
         header
             h1 Noom
         main
-            div#welcome
-                form
-                    input#roomName(placeholder="room name", required, type="text")
-                    input#name(placeholder="name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms: 
-                ul 
-            div#room
-                h3 
-                ul
-                form#name
-                    input(placeholder="Nickname" required, type="text")
-                    button change 
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send 
+            div#myStream
+                video#myFace(autoplay, playsinline, muted, width="400", height="400")
+                button#mute Mute 
+
+                button#camera Turn Camera Off 
 
         script(src="/socket.io/socket.io.js")  
         script(src="/public/js/app.js") 
