--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,7 +13,7 @@ html(lang="en")
             div#welcome
                 form
                     input(placeholder="room name", required, type="text")
-                    buttom Enter room
+                    button Enter room
             div#call
                 div#myStream
                     video#myFace(autoplay, playsinline, width="400", height="400")
